--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS -->
 
+    <link rel="shortcut icon" href="../assets/ZeroLogo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../src/index.css" />
     <link rel="stylesheet" href="../src/normalize.css" />
 
@@ -26,7 +27,7 @@
         <a class="item" href="https://github.com/ZeroBl21"> Github </a>
         <a
           class="item"
-          href="https://github.com/ZeroBl21/Zero-s-smartphone-store"
+          href="https://github.com/ZeroBl21/foxy-gallerys"
         >
           Repository
         </a>
