--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../src/index.css" />
     <link rel="stylesheet" href="../src/normalize.css" />
 
-    <title>Foxys</title>
+    <title>Foxy Gallery</title>
   </head>
   <body>
     <header>
